--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.4.0",
     "font-awesome": "^4.7.0",
+    "ngx-toastr": "^14.3.0",
     "rxfire": "^6.0.0",
     "rxjs": "~7.5.0",
     "zone.js": "~0.11.4"
